# hydro

./: Cargo.toml  README.md
crates/eigenda/: Cargo.toml  README.md
crates/eigenda/src/: lib.rs
crates/eigenda/src/common/: certificate.rs  eigenda_data.rs  mod.rs
crates/eigenda/src/derive/: blob_data.rs  eigenda.rs  mod.rs  traits.rs
crates/eigenda/src/errors/: mod.rs
crates/eigenda/src/proto/: mod.rs
crates/oracle/: Cargo.toml  README.md
crates/oracle/src/: hint.rs  lib.rs  provider.rs
crates/proofs/: Cargo.toml  README.md
crates/proofs/src/: lib.rs  witness.rs
