[workspace]
resolver = "2"
members = ["bin/*", "crates/*"]


[workspace.dependencies]
# Hydro
hydro-client = { path = "bin/client", version = "0.1.0", default-features = false }
hydro-eigenda = { path = "crates/eigenda", version = "0.1.0", default-features = false }
hydro-oracle = { path = "crates/oracle", version = "0.1.0", default-features = false }
hydro-proofs = { path = "crates/proofs", version = "0.1.0", default-features = false }

# Kona
# We use git dependencies instead of version dependencies because Kona is moving very fast right now
# but publish infrequently (last was 2 weeks ago). We want to make sure to use the latest code
# while we're still figuring out how to integrate with it.
# Replace these version-based dependencies
kona-mpt = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-derive = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-driver = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-executor = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-proof = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-std-fpvm = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-preimage = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-std-fpvm-proc = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-providers-alloy = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-protocol = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-genesis = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-client = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle", default-features = false }
kona-host = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle" }
kona-cli = { git = "https://github.com/mantle-xyz/kona", branch = "kona-client/v1.0.1_mantle" }

# Alloy
alloy-rlp = { version = "0.3.11", default-features = false }
alloy-trie = { version = "0.8.0", default-features = false }
alloy-eips = { version = "0.15.8", default-features = false }
alloy-serde = { version = "0.15.8", default-features = false }
alloy-provider = { version = "0.15.8", default-features = false }
alloy-consensus = { version = "0.15.8", default-features = false }
alloy-transport = { version = "0.15.8", default-features = false }
alloy-rpc-types = { version = "0.15.8", default-features = false }
alloy-rpc-types-eth = { version = "0.15.8", default-features = false }
alloy-rpc-client = { version = "0.15.8", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-node-bindings = { version = "0.15.8", default-features = false }
alloy-transport-http = { version = "0.15.8", default-features = false }
alloy-rpc-types-engine = { version = "0.15.8", default-features = false }
alloy-rpc-types-beacon = { version = "0.15.8", default-features = false }
alloy-contract = { version = "0.15.8", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }

alloy-chains = { version = "0.2.0", default-features = false }

# OP Alloy
op-alloy-network = { git = "https://github.com/mantle-xyz/op-alloy", branch = "v151", default-features = false }
op-alloy-consensus = { git = "https://github.com/mantle-xyz/op-alloy", branch = "v151", default-features = false }
op-alloy-rpc-types-engine = { git = "https://github.com/mantle-xyz/op-alloy", branch = "v151", default-features = false }

# General
lru = "0.12.5"
rand = "0.8.5"
clap = "4.5.24"
tokio = "1.44.2"
async-channel = "2.3.1"
cfg-if = "1.0.0"
reqwest = "0.12.12"
async-trait = "0.1.85"
linked_list_allocator = "0.10.5"
bytes = "1.9.0"

# General
sha2 = { version = "0.10.8", default-features = false }
c-kzg = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
rust-kzg-bn254 = { version = "0.2.1", default-features = false }

# Tracing
tracing-loki = "0.2.5"
tracing-subscriber = "0.3.19"
tracing = { version = "0.1.41", default-features = false }

# Testing
pprof = "0.14.0"
proptest = "1.6.0"
criterion = "0.5.1"

# Serialization
rkyv = "0.8.9"
serde = { version = "1.0.217", default-features = false }
serde_json = { version = "1.0.135", default-features = false }
bincode = "1.3"

# Ethereum
unsigned-varint = "0.8.0"
revm = { git = "https://github.com/mantle-xyz/revm", branch = "skadi_new", default-features = false }
op-revm = { git = "https://github.com/mantle-xyz/revm", branch = "skadi_new", default-features = false }
alloy-evm = { git = "https://github.com/mantle-xyz/evm", branch = "dev", default-features = false }
alloy-op-evm = { git = "https://github.com/mantle-xyz/evm", branch = "dev", default-features = false }

# proto
prost = { version = "0.13.3", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false }
rlp = { version = "0.6.1", default-features = false }

#eigenlayer
rust-kzg-bn254-primitives = { git = "https://github.com/Layr-Labs/rust-kzg-bn254", rev = "b3e532e9aad533009849755d5ad7b9578a16bfb2", default-features = false }
rust-kzg-bn254-prover = { git = "https://github.com/Layr-Labs/rust-kzg-bn254", rev = "b3e532e9aad533009849755d5ad7b9578a16bfb2", default-features = false }
num = "0.4"

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
