[package]
name = "hydro-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
kona-preimage.workspace = true
kona-proof.workspace = true
hydro-eigenda.workspace = true

alloy-primitives.workspace = true
alloy-rlp.workspace = true
tracing.workspace = true
async-trait.workspace = true
